crates/zizmor/tests/integration/snapshots/integration__e2e__invalid_inputs-10.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(1).input(input_under_test(&format!(\"invalid/{workflow_tc}.yml\"))).args([\"--strict-collection\"]).run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
fatal: no audit was performed
failed to load file://@@INPUT@@ as action

Caused by:
    0: input does not match expected validation schema
    1: "name" is a required property
       "description" is a required property
       "runs" is a required property
