crates/zizmor/tests/integration/snapshots/integration__e2e__invalid_inputs.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().expects_failure(1).input(input_under_test(&format!(\"invalid/{workflow_tc}.yml\"))).args([\"--strict-collection\"]).run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
fatal: no audit was performed
failed to load file://@@INPUT@@ as workflow

Caused by:
    0: input does not match expected validation schema
    1: jobs.invalid: "runs-on" is a required property
       jobs.invalid: Additional properties are not allowed ('steps' was unexpected)
       jobs.invalid: "uses" is a required property
