crates/zizmor/tests/integration/snapshots/integration__e2e__issue_1116_strict_collection_remote_input.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().offline(false).expects_failure(1).output(OutputMode::Stderr).args([\"--strict-collection\"]).input(\"woodruffw-experiments/zizmor-issue-1116@f41c414\").run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
fatal: no audit was performed
failed to load https://github.com/woodruffw-experiments/zizmor-issue-1116/blob/f41c414/invalid-action/action.yml as action

Caused by:
    0: input does not match expected validation schema
    1: "name" is a required property
       "description" is a required property
       "runs" is a required property
