crates/zizmor/tests/integration/snapshots/integration__e2e__issue_726.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().offline(NetworkMode::AssertOnline).output(OutputMode::Both).args([\"--no-online-audits\"]).input(\"woodruffw-experiments/zizmor-bug-726@a038d1a35\").run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
 INFO collect_inputs:collect_from_repo_slug{slug=InputSlug { owner: "woodruffw-experiments", repo: "zizmor-bug-726", git_ref: Some("a038d1a35") }}: zizmor_collect: collected 6 inputs from woodruffw-experiments/zizmor-bug-726
 INFO audit: zizmor: 🌈 completed .github/actions/custom-action/action.yml
 INFO audit: zizmor: 🌈 completed .github/workflows/actions/custom-action/action.yml
 INFO audit: zizmor: 🌈 completed .github/workflows/custom-action/action.yml
 INFO audit: zizmor: 🌈 completed .github/workflows/hello.yml
 INFO audit: zizmor: 🌈 completed arbitrary/subdir/.github/workflows/hello.yml
 INFO audit: zizmor: 🌈 completed arbitrary/subdir/custom-action/action.yml
No findings to report. Good job! (4 suppressed)
