crates/zizmor/tests/integration/snapshots/integration__e2e__pr_960_backstop.snap
---
source: crates/zizmor/tests/integration/e2e.rs
expression: "zizmor().output(OutputMode::Both).input(input_under_test(\"pr-960-backstop\")).run()?"
---
 INFO zizmor: 🌈 zizmor v@@VERSION@@
 WARN audit: zizmor: zizmor is running in offline mode by default; some audits and auto-fixes will not be available. see https://docs.zizmor.sh/usage/#operating-modes for details
 INFO audit: zizmor: 🌈 completed @@INPUT@@/action.yml
No findings to report. Good job!
